--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -61,7 +61,14 @@
 
         <ScrollView
             android:layout_width="350dp"
-            android:layout_height="400dp" />
+            android:layout_height="400dp" >
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+        </ScrollView>
 
         <ImageView
             android:layout_width="350dp"
