--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,6 @@
 
     </LinearLayout>
 
-
         <FrameLayout
             android:layout_width="350dp"
             android:layout_height="0dp"
@@ -66,13 +65,28 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:orientation="vertical">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:hint="제목을 입력해주세요."></EditText>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
                     android:orientation="horizontal">
+
                     <Button
                         android:layout_width="100dp"
-                        android:layout_height="100dp"></Button>
+                        android:layout_height="100dp"
+                        android:backgroundTint="#445EFF"
+                        android:text="이미지추가"
+                        android:textSize="20dp"></Button>
                     <View
                         android:layout_width="20dp"
                         android:layout_height="0dp"/>
@@ -80,17 +94,144 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
-
-                        <EditText
-                            android:layout_width="wrap_content"
+                        <LinearLayout
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textSize="20dp"
-                            android:inputType="textCapWords"
-                            android:hint="방 제목을 입력해주세요."></EditText>
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="인원수 : "
+                                android:textSize="20dp"></TextView>
+                            <View
+                                android:layout_width="17dp"
+                                android:layout_height="0dp"></View>
+
+                            <EditText
+                                android:layout_width="82dp"
+                                android:layout_height="wrap_content"
+                                android:textSize="20dp"
+                                android:inputType="number"
+                                android:hint=""></EditText>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:text=" 명"
+                                android:textSize="20dp"></TextView>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:text="최소금액 : "
+                                android:textSize="20dp"></TextView>
+
+                            <EditText
+                                android:layout_width="82dp"
+                                android:layout_height="wrap_content"
+                                android:textSize="20dp"
+                                android:inputType="number"
+                                android:hint=""></EditText>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="5dp"
+                                android:text=" 원"
+                                android:textSize="20dp"></TextView>
+                        </LinearLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:hint="설명을 입력해주세요."></EditText>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_margin="5dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@drawable/link_icon" />
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="0dp"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:hint="링크를 입력해주세요."></EditText>
+            </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="마감일 설정 : "
+                        android:textSize="20dp"></TextView>
+
+
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:backgroundTint="#445EFF"
+                        android:text="XXXX.XX.XX">
+                    </Button>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="마감시간 설정 : "
+                        android:textSize="20dp"></TextView>
+
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:hint="링크를 입력해주세요."></EditText>
+                </LinearLayout>
+
             </LinearLayout>
         </FrameLayout>
         <LinearLayout
