--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         tools:layout_editor_absoluteY="0dp">
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/Top_Account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
@@ -34,13 +34,12 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/alram_yes_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:background="#FFFFFFFF"
             app:srcCompat="@drawable/alram_yes_icon" />
-
     </LinearLayout>
 
         <FrameLayout
@@ -67,12 +66,21 @@
                 android:orientation="vertical">
 
                 <EditText
+                    android:id="@+id/MakePost_StrTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginLeft="15dp"
                     android:hint="제목을 입력해주세요."></EditText>
+                <EditText
+                    android:id="@+id/MakePost_Platform"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:hint="플랫폼명을 입력해주세요. ex)쿠팡"></EditText>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -82,6 +90,7 @@
                     android:orientation="horizontal">
 
                     <Button
+                        android:id="@+id/MakePost_addImage"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:backgroundTint="#445EFF"
@@ -110,11 +119,11 @@
                                 android:layout_height="0dp"></View>
 
                             <EditText
+                                android:id="@+id/IntPeopleNum"
                                 android:layout_width="82dp"
                                 android:layout_height="wrap_content"
                                 android:textSize="20dp"
-                                android:inputType="number"
-                                android:hint=""></EditText>
+                                android:inputType="number"></EditText>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -130,6 +139,8 @@
                             android:orientation="horizontal">
 
                             <TextView
+
+
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
@@ -137,6 +148,7 @@
                                 android:textSize="20dp"></TextView>
 
                             <EditText
+                                android:id="@+id/IntMinMoney"
                                 android:layout_width="82dp"
                                 android:layout_height="wrap_content"
                                 android:textSize="20dp"
@@ -157,6 +169,7 @@
                 </LinearLayout>
 
                 <EditText
+                    android:id="@+id/MakePost_PostDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
@@ -182,6 +195,7 @@
                     android:layout_height="0dp"/>
 
                 <EditText
+                    android:id="@+id/MakePost_Link"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
@@ -200,15 +214,46 @@
                         android:layout_gravity="center"
                         android:text="마감일 설정 : "
                         android:textSize="20dp"></TextView>
-
-
-                    <Button
-                        android:layout_width="match_parent"
+                    <EditText
+                        android:id="@+id/IntDeadline_year"
+                        android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
-                        android:backgroundTint="#445EFF"
-                        android:text="XXXX.XX.XX">
-                    </Button>
+                        android:inputType="number"
+                        android:hint="2022"></EditText>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="년 "
+                        android:textSize="20dp"></TextView>
+                    <EditText
+                        android:id="@+id/IntDeadline_month"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:inputType="number"
+                        android:hint="12"></EditText>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="월 "
+                        android:textSize="20dp"></TextView>
+                    <EditText
+                        android:id="@+id/IntDeadline_day"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:inputType="number"
+                        android:hint="31"></EditText>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="일"
+                        android:textSize="20dp"></TextView>
+
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -224,15 +269,45 @@
                         android:text="마감시간 설정 : "
                         android:textSize="20dp"></TextView>
 
-
                     <EditText
-                        android:layout_width="match_parent"
+                        android:id="@+id/IntDeadline_hour"
+                        android:layout_width="40dp"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
-                        android:hint="링크를 입력해주세요."></EditText>
+                        android:inputType="number"
+                        android:hint="14"></EditText>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="시 "
+                        android:textSize="20dp"></TextView>
+                    <EditText
+                        android:id="@+id/IntDeadline_minute"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:inputType="number"
+                        android:hint="30"></EditText>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="분"
+                        android:textSize="20dp"></TextView>
                 </LinearLayout>
 
+                <Button
+                    android:id="@+id/FinishPostMake"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="글 올리기"
+                    android:backgroundTint="#445EFF"
+                    android:textSize="20dp" />
+
             </LinearLayout>
+
         </FrameLayout>
         <LinearLayout
             android:layout_width="match_parent"
