--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,16 +67,18 @@
                 />
 
             <Button
+                android:id="@+id/loginbutton"
+                andrioid
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="#ffffff"
-                android:text="로그인"
-                android:id="@+id/loginbutton"
-                android:layout_marginTop="10dp"
                 android:layout_gravity="center"
-                android:background="@color/logincolor"/>
+                android:layout_marginTop="10dp"
+                android:background="@color/logincolor"
+                android:onClick="agaoigag"
+                android:text="로그인"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
